# single-arm-robot

./: README.md
alfr3/config/: controllers.yaml  joint_names_alfr3.yaml
alfr3/launch/: spawn_controllers.launch
alfr3/meshes/: castor_wheel.STL
alfr3/urdf/: alfr3.urdf
src/alfr3/: CMakeLists.txt  package.xml
src/alfr3/config/: controllers.yaml  joint_names_alfr3.yaml
src/alfr3/launch/: display.launch  gazebo.launch  start_full_simulation.launch
src/alfr3/meshes/: left_wheel.STL  right_wheel.STL
src/alfr3/scripts/: alfr_controller.py  alfr_line_follower.py  gate_detector.py
src/alfr3/urdf/: alfr3.csv  alfr3.urdf
src/alfr33/urdf/: alfr3.urdf
src/lam_challenge_sim/: CMakeLists.txt  package.xml
src/lam_challenge_sim/include/lam_challenge_sim/: VisualControllerPlugin.hh
src/lam_challenge_sim/launch/: start_arena.launch  start_full_simulation.launch
src/lam_challenge_sim/materials/scripts/: lam_materials.material
src/lam_challenge_sim/models/line_arena/: model.config  model.sdf
src/lam_challenge_sim/models/line_arena/materials/scripts/: line_arena.material
src/lam_challenge_sim/src/: VisualControllerPlugin.cpp
src/lam_challenge_sim/worlds/: arena_test.world  lam_arena.world
src/moveit_robot_arm/: CMakeLists.txt  package.xml
src/moveit_robot_arm/config/: fake_controllers.yaml  gazebo_roboticarm8.urdf  joint_limits.yaml  new_ros_controllers.yaml  ompl_planning.yaml  roboticarm8.srdf
src/moveit_robot_arm/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  full_robot_arm.launch  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  roboticarm8_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/roboticarm8/: CMakeLists.txt  package.xml
src/roboticarm8/config/: joint_names_roboticarm8.yaml  joint_trajectory_controller.yaml
src/roboticarm8/launch/: arm_urdf.launch  display.launch  gazebo.launch
src/roboticarm8/meshes/: base_cap.STL  base_link.STL  gear_1.STL  gear_2.STL  grip_1.STL  grip_2.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_5_1.STL
src/roboticarm8/urdf/: roboticarm8.csv  roboticarm8.urdf
src/two_wheel_robot/: package.xml
src/two_wheel_robot/launch/: robot_gazebo.launch
src/two_wheel_robot/models/cylinder_obstacle/: model.sdf
src/two_wheel_robot/models/line_arena/materials/scripts/: line_arena.material
src/two_wheel_robot/scripts/: line_follower.py
src/two_wheel_robot/urdf/: robot.xacro
two_wheel_robot/: CMakeLists.txt
two_wheel_robot/models/box_obstacle/: model.config  model.sdf
two_wheel_robot/models/cylinder_obstacle/: model.config
two_wheel_robot/models/line_arena/: model.config  model.sdf
two_wheel_robot/worlds/: line_world.world
