<package format="2">
  <name>alfr3</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for alfr3</p>
    <p>This package contains configuration data, 3D models and launch files for alfr3 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
 

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <depend>moveit_simple_controller_manager</depend>
  

  <export>
    <architecture_independent />
  </export>
</package>
