<package format="2">
  <name>alfr3</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for alfr3</p>
    <p>This package contains configuration data, 3D models and launch files for alfr3 robot</p>
  </description>

  <author email="TODO@email.com">TODO</author>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <!-- Build system -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core ROS deps -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- URDF + xacro -->
  <depend>urdf</depend>
  <depend>xacro</depend>

  <!-- Launch + RViz -->
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <!-- Messages -->
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- Gazebo -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>

  <!-- Controllers -->
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>diff_drive_controller</depend>
  <depend>velocity_controllers</depend>

  <!-- Optional (if you ever use MoveIt) -->
  <depend>moveit_simple_controller_manager</depend>

  <export>
    <architecture_independent/>
  </export>
</package>

